fix(LTAK-33):fixed backdrop-closing on mobile + added content to browserslistrc (#261)

--- a/src/app/modules/core/components/inquiry/inquiry.component.scss
+++ b/src/app/modules/core/components/inquiry/inquiry.component.scss
@@ -1,60 +1,52 @@
 @import '~src/assets/scss/utils';
 
-.contact-wrapper {
-  padding: 40px 0;
+.form-group {
+  width: 100% !important;
+}
 
-  @include media-breakpoint-up(md) {
-    padding: 80px 90px;
-  }
+.form-control {
+  margin: 10px 0;
+  border-radius: 0;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 160%;
+}
 
-  .form-group {
-    width: 100% !important;
-  }
+.form-control::placeholder {
+  color: lightgrey;
+}
 
-  .form-control {
-    margin: 10px 0;
-    border-radius: 0;
-    font-weight: 300;
-    font-size: 18px;
-    line-height: 160%;
-  }
+.form-control,
+.form-check-input:focus {
+  box-shadow: none;
+}
 
-  .form-control::placeholder {
-    color: lightgrey;
-  }
+i {
+  color: $orange;
+  font-size: 28px;
+  margin-right: 30px;
+}
 
-  .form-control,
-  .form-check-input:focus {
-    box-shadow: none;
-  }
+::ng-deep a {
+  text-decoration: none !important;
+  color: var(--text-basic-color) !important;
+}
 
-  i {
-    color: $orange;
-    font-size: 28px;
-    margin-right: 30px;
-  }
+.content-text {
+  margin: 0;
+  font-size: 16px;
+  line-height: 1.7;
+  color: var(--text-basic-color);
+}
 
-  ::ng-deep a {
-    text-decoration: none !important;
-    color: var(--text-basic-color) !important;
-  }
+.form-check-input {
+  border-radius: 0;
+  width: 20px;
+  height: 20px;
+}
 
-  .content-text {
-    margin: 0;
-    font-size: 16px;
-    line-height: 1.7;
-    color: var(--text-basic-color);
-  }
-
-  .form-check-input {
-    border-radius: 0;
-    width: 20px;
-    height: 20px;
-  }
-
-  .form-check-input:checked {
-    background-color: $orange;
-  }
+.form-check-input:checked {
+  background-color: $orange;
 }
 
 .btn {
